fix spacing template in photo, photoset, video, audio, text, link

--- a/css/sass/template/article.scss
+++ b/css/sass/template/article.scss
@@ -53,7 +53,7 @@
     line-height: 16px;
 }
 
-.photo, .exif, .highres, .content, .photoset {
+.photo, .exif, .highres, .content, .photoset, .link, .video, .audio, .content-chat {
     margin-bottom: .5em
 }
 
@@ -72,20 +72,8 @@
     display: table;
     border-collapse: separate;
     border-spacing: 16px 4px;
-    margin-bottom: 1em;
 }
 //TEXT-CHAT
-
-//AUDIO
-.post-audio, .post-link {
-    margin-bottom: 1em;
-}
-
-.post-link {
-    .content {
-        margin-top: 0;
-    }
-}
 
 .audio-tag {
     display: table;
