--- a/css/sass/template/post-details.scss
+++ b/css/sass/template/post-details.scss
@@ -8,7 +8,7 @@
 }
 
 .post-details {
-    margin-top: 2em !important;
+    margin-top: 1em !important;
     padding-top: 1em;
     border-top: 1px solid #666;
 }
